--- a/go-webdev/lenslocked.com/.config
+++ b/go-webdev/lenslocked.com/.config
@@ -11,5 +11,10 @@
         "user": "postgres",
         "password": "developer",
         "name": "lenslocked_dev"
+    },
+    "mailgun": {
+        "api_key": "def2e75e669dfda910e39955d15fb470-2b0eef4c-387749db",
+        "public_api_key": "pubkey-668ad15abd6fa666e401c87981312a4d",
+        "domain": "mg.lenslocked.myslidekit.com"
     }
 }
