added docker-compose config and refactored services

--- a/go-micro-tutorial/consignment-service/Makefile
+++ b/go-micro-tutorial/consignment-service/Makefile
@@ -1,7 +1,4 @@
 build:
 	protoc -I. --go_out=plugins=micro:. proto/consignment/consignment.proto
-	CGO_ENABLED=0 go build -a -installsuffix cgo -o consignment-service .
-	docker build -t consignment-service .
-
-run: 
-	docker run -p 50051:50051 -e MICRO_SERVER_ADDRESS=:50051 consignment-service
+	# CGO_ENABLED=0 go build -a -installsuffix cgo -o consignment-service .
+	CGO_ENABLED=0 go build -o consignment-service .
