added make clean option to services

--- a/go-micro-tutorial/consignment-service/Makefile
+++ b/go-micro-tutorial/consignment-service/Makefile
@@ -2,3 +2,6 @@ build:
 	protoc -I. --go_out=plugins=micro:. proto/consignment/consignment.proto
 	# CGO_ENABLED=0 go build -a -installsuffix cgo -o consignment-service .
 	CGO_ENABLED=0 go build -o consignment-service .
+
+clean:
+	rm $(shell basename $(CURDIR))
