added consignment service authentication middleware

--- a/go-micro-tutorial/consignment-cli/Dockerfile
+++ b/go-micro-tutorial/consignment-cli/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /app
 ADD consignment.json .
 ADD consignment-cli .
 
-CMD ["./consignment-cli"]
+CMD ./consignment-cli consignment.json TODO_AUTH_TOKEN
