integrated newest micro driver for protobuf in makefiles. Added explicit GOOS and GOARCH values

--- a/go-micro-tutorial/consignment-service/Makefile
+++ b/go-micro-tutorial/consignment-service/Makefile
@@ -1,7 +1,7 @@
 build:
-	protoc -I. --go_out=plugins=micro:. proto/consignment/consignment.proto
+	protoc -I. --go_out=. --micro_out=. proto/consignment/consignment.proto
 	# CGO_ENABLED=0 go build -a -installsuffix cgo -o consignment-service .
-	CGO_ENABLED=0 go build -o consignment-service .
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o consignment-service .
 
 clean:
 	rm $(shell basename $(CURDIR))
