--- a/go-micro-tutorial/user-service/Makefile
+++ b/go-micro-tutorial/user-service/Makefile
@@ -1,9 +1,9 @@
 BINARY=$(shell basename $(CURDIR))
 
 build:
-	protoc -I. --go_out=plugins=micro:. proto/user/user.proto
+	protoc -I. --go_out=. --micro_out=. proto/user/user.proto
 	# CGO_ENABLED=0 go build -a -installsuffix cgo -o user-service .
-	CGO_ENABLED=0 go build -o $(BINARY) .
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o $(BINARY) .
 
 clean:
 	rm $(BINARY)
