--- a/go-micro-tutorial/vessel-service/Makefile
+++ b/go-micro-tutorial/vessel-service/Makefile
@@ -1,7 +1,7 @@
 build:
-	protoc -I. --go_out=plugins=micro:. proto/vessel/vessel.proto
+	protoc -I. --go_out=. --micro_out=. proto/vessel/vessel.proto
 	# CGO_ENABLED=0 go build -a -installsuffix cgo -o vessel-service .
-	CGO_ENABLED=0 go build -o vessel-service .
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o vessel-service .
 
 clean:
 	rm $(shell basename $(CURDIR))
